# cpp-android-basic-samples

./: .gitignore  README.md
samples-android/: README.build  build.gradle  build.sh  build_sample.sh  settings.gradle
samples-android/ButtonClicker/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  build.sh  project.properties
samples-android/ButtonClicker/jni/: Android.mk  Application.mk  ButtonClickerNativeActivity.cpp  ButtonClickerNativeActivity.h  ButtonClickerNativeActivity_Engine.cpp  TeapotRenderer.cpp  TeapotRenderer.h
samples-android/CollectAllTheStarsNative/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  build.sh  build.xml  project.properties
samples-android/CollectAllTheStarsNative/jni/: Android.mk  CollectAllTheStarsNativeActivity.cpp  CollectAllTheStarsNativeActivity.h  CollectAllTheStarsNativeActivity_Engine.cpp  TeapotRenderer.h
samples-android/CollectAllTheStarsNative/jni/jui_helper/: JavaUI.h  JavaUI_Layouts.cpp  JavaUI_View.h
samples-android/CollectAllTheStarsNative/jni/ndk_helper/: JNIHelper.h
samples-android/CollectAllTheStarsNative/res/values/: strings.xml
samples-android/CollectAllTheStarsNative/src/com/google/example/games/catt3/: CollectAllTheStarsApplication.java  CollectAllTheStarsNativeActivity.java
samples-android/CollectAllTheStarsNative/src/com/sample/helper/: JUIForwardingPopupWindow.java
samples-android/CollectAllTheStarsNative/src/main/: AndroidManifest.xml  ant.properties
samples-android/CollectAllTheStarsNative/src/main/cpp/: CollectAllTheStarsNativeActivity.cpp  CollectAllTheStarsNativeActivity.h
samples-android/CollectAllTheStarsNative/src/main/java/com/google/example/games/cats/: CollectAllTheStarsApplication.java  CollectAllTheStarsNativeActivity.java
samples-android/CollectAllTheStarsNative/src/main/java/com/sample/helper/: NDKHelper.java
samples-android/CollectAllTheStarsNative/src/main/jni/: Android.mk  CollectAllTheStarsNativeActivity.cpp  CollectAllTheStarsNativeActivity.h  CollectAllTheStarsNativeActivity_Engine.cpp
samples-android/CollectAllTheStarsNative/src/main/res/layout/: widgets.xml
samples-android/CollectAllTheStarsNative/src/main/res/values/: strings.xml
samples-android/Common/JuiHelper/: CMakeLists.txt  build.gradle
samples-android/Common/NDKHelper/: CMakeLists.txt  build.gradle
samples-android/Common/NDKHelper/src/main/: AndroidManifest.xml
samples-android/Common/NDKHelper/src/main/cpp/: GLContext.cpp  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  perfMonitor.cpp  shader.cpp
samples-android/Common/TeapotRenderer/: TeapotRenderer.cpp
samples-android/Common/cpufeatures/: build.gradle
samples-android/Common/gpg-sdk/: build.gradle
samples-android/Common/jui_helper/: JavaUI_Dialog.cpp  JavaUI_Toast.cpp
samples-android/Common/native_app_glue/: build.gradle
samples-android/Common/ndk_helper/: GLContext.cpp  JNIHelper.cpp  JNIHelper.h
samples-android/Minimalist/: AndroidManifest.xml  CMakeLists.txt  build.gradle  project.properties
samples-android/Minimalist/src/: README
samples-android/TbmpSkeletonNative/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  build.sh  build.xml  project.properties
samples-android/TbmpSkeletonNative/jni/: Android.mk  Application.mk  TBMPSkeletonNativeActivity.h  TBMPSkeletonNativeActivity_Engine.cpp
samples-android/Teapot/: .project  CMakeLists.txt  build.gradle
samples-android/Teapot/jni/: Android.mk  NativeGameActivity.cpp  StateManager.cpp
samples-android/Teapot/res/values/: ids.xml
samples-android/Teapot/src/main/: AndroidManifest.xml
samples-android/Teapot/src/main/java/com/google/example/nativegame/: NativeGameActivity.java  NativeGameApplication.java
samples-android/Teapot/src/main/java/com/sample/helper/: JUIAlertDialog.java  JUIDialog.java  JUIHelper.java  JUIRelativeLayout.java  NDKHelper.java
samples-android/Teapot/src/main/jni/: Android.mk  NativeGameActivity.cpp  StateManager.cpp  TeapotRenderer.cpp
samples-android/Teapot/src/main/res/layout/: widgets.xml
samples-android/Teapot/src/main/res/values/: ids.xml  strings.xml  styles.xml
samples-android/Teapot/src/main/res/values-v11/: styles.xml
samples-android/Teapot/src/main/res/values-v14/: styles.xml
samples-android/TrivialQuestNative/: .cproject  .project  AndroidManifest.xml  README.md  build.gradle  build.xml
samples-android/TrivialQuestNative/jni/: Android.mk  Application.mk  TeapotRenderer.cpp  TrivialQuestNativeActivity.cpp  TrivialQuestNativeActivity_Engine.cpp
samples-android/gradle/wrapper/: gradle-wrapper.properties
samples-android/minimalist/: .project  AndroidManifest.xml  project.properties
samples-android/minimalist/jni/: Android.mk  StateManager.cpp  main.cpp
samples-android/teapot/: .cproject  AndroidManifest.xml
samples-android/teapot/jni/: Android.mk  Application.mk  NativeGameActivity.cpp  StateManager.cpp  TeapotRenderer.h
samples-ios/CollectAllTheStarsNative/: README.md
samples-ios/CollectAllTheStarsNative/CollectAllTheStars/: CollectAllTheStars-Info.plist  CollectAllTheStars-Prefix.pch  GCATAppDelegate.h  GCATAppDelegate.mm  GCATConstants.h  GCATModel.h  GCATModel.mm  GCATStarInventory.h  GCATStarInventory.mm  GCATViewController.h  GCATViewController.mm  main.m
samples-ios/CollectAllTheStarsNative/CollectAllTheStars.xcodeproj/: project.pbxproj
samples-ios/NativeGame/NativeGame/: AppDelegate.h  AppDelegate.mm  NativeGame-Info.plist  StateManager.cpp  StateManager.h  ViewController.h  ViewController.mm  main.m
samples-ios/NativeGame/NativeGame.xcodeproj/: project.pbxproj
samples-ios/NativeGame/NativeGameTests/: NativeGameTests-Info.plist  NativeGameTests.m
samples-ios/TBMPSkeletonNative/: README.md
samples-ios/TBMPSkeletonNative/TBMPSkeleton/: AppDelegate.h  AppDelegate.mm  Constants.h  GameData.h  GameData.mm  GameViewController.h  GameViewController.mm  LobbyViewController.h  LobbyViewController.mm  TBMPSkeleton-Info.plist  main.mm
samples-ios/TBMPSkeletonNative/TBMPSkeleton.xcodeproj/: project.pbxproj
(+213 files in other folders)
